# flask-oauth-provider-authlib-1.0.0-dev

./: README.md  pyproject.toml  wsgi.py
app/: __init__.py  grant.py  models.py  oauth2.py  routes.py  settings.py
app/templates/: create_client.html
